--- a/css/styles.css
+++ b/css/styles.css
@@ -43,13 +43,17 @@
     font-display: swap;
 }
 
+* {
+	box-sizing: border-box;
+	line-height: 1.5;
+}
+
 body {
 	font-family: 'Poppins';
 	margin: 0;
 	background-color: #293133;
 	color: #ffffff;
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 }
 
@@ -88,12 +92,32 @@ p {
 	font-weight: normal;
 }
 
-p, a, input {
+p, a, input, button {
 	font-size: 16px;
 }
 
 input {
 	display: block;
+}
+
+a {
+	text-decoration: none;
+	color: #293133;
+	display: inline-block;
+	padding: 1rem;
+	border-radius: 8px;
+	border: none;
+	background: #ffffff;
+}
+
+button {
+	text-decoration: none;
+	color: #293133;
+	display: inline-block;
+	padding: 1rem;
+	border-radius: 8px;
+	background: #ffffff;
+	border: none;
 }
 
 .naar-werk-container {
