--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,17 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Metal Mania';
+    src: url('../fonts/MetalMania-Regular.woff2') format('woff2'),
+        url('../fonts/MetalMania-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 :root {
 	/* #003082 */
 	--main-color: #293133;
@@ -53,7 +64,8 @@
 	--main-bg-color: #181c1d;
 	--secondary-bg-color: #293133;
 
-	--font-family: 'Poppins'
+	--font-family: 'Poppins';
+	--font-family-metal: 'Metal Mania';
 }
 
 * {
@@ -70,27 +82,39 @@ body {
 	justify-content: center;
 }
 
+.metallica-logo {
+	background: no-repeat center center / contain;
+	/* https://worldvectorlogo.com/nl/downloaded/metallica-2 */
+	background-image: url('../assets/metallica-2.svg');
+	position: fixed;
+	height: 50vh;
+	width: 50vw;
+	bottom: 0;
+	left: 25%;
+	z-index: -2;
+}
+
 h1 {
 	font-size: 2.5em;
-	font-family: var(--font-family);
+	font-family: var(--font-family-metal);
 	font-weight: 900;
 }
 
 h2 {
 	font-size: 2em;
-	font-family: var(--font-family);
+	font-family: var(--font-family-metal);
 	font-weight: bold;
 }
 
 h3 {
 	font-size: 1.75em;
-	font-family: var(--font-family);
+	font-family: var(--font-family-metal);
 	font-weight: 500;
 }
 
 h4 {
 	font-size: 1.5em;
-	font-family: var(--font-family);
+	font-family: var(--font-family-metal);
 	font-weight: 500;
 }
 
@@ -513,4 +537,8 @@ article header > div .arrow{
 option,
 select {
 	font-size: 16px;
+}
+
+.not-ns .naar-werk-container {
+	
 }
