--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,8 @@
 	
 	--main-bg-color: #181c1d;
 	--secondary-bg-color: #293133;
+	--bg-color-lightest: #696F70;
+	--bg-color-light: #444B4D;
 
 	--font-family: 'Poppins';
 	--font-family-metal: 'Metal Mania';
@@ -160,6 +162,16 @@ button {
 	border: none;
 }
 
+.submit {
+	text-decoration: none;
+	color: #293133;
+	display: inline-block;
+	padding: 1rem;
+	border-radius: 8px;
+	background: var(--secondary-bg-color);
+	border: none;
+}
+
 .waar-naar-toe-container {
 	display: none;
 }
@@ -173,18 +185,6 @@ body > div {
 	width: 100%;
 }
 
-.reisplanner {
-	width: 100%;
-	background-color: var(--main-color);
-}
-
-.reisplanner form {
-	max-width: 75rem;
-	margin: 0 auto;
-}
-
-
-
 fieldset legend {
 	visibility: hidden;
 	opacity: 0;
@@ -195,39 +195,9 @@ fieldset {
 	padding: 0;
 }
 
-.reis-opties {
-	display: flex;
-}
-
-.locaties {
-	display: flex;
-	
-}
-
-.locaties label {
-	color: var(--secondary-color);
-    background-color: var(--main-bg-color);
-    border-radius: 4px;
-    display: flex;
-    overflow: hidden;
-	align-items: center;
-	padding: 0.5rem 0.875rem;
-	flex: 1 1 100%;
-	
-}
-
-.locaties label:first-of-type {
-	margin-right: 1em
-}
-
 .switcher {
 	margin-right: 1em;
 	/* Directly copied from: https://www.ns.nl/reisplanner */
-}
-
-.switcher button {
-	background-color: transparent;
-	background-image: url("data:image/svg+xml;charset%3DUS-ASCII,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%3C!DOCTYPE%20svg%20PUBLIC%20%22-%2F%2FW3C%2F%2FDTD%20SVG%201.1%2F%2FEN%22%20%22http%3A%2F%2Fwww.w3.org%2FGraphics%2FSVG%2F1.1%2FDTD%2Fsvg11.dtd%22%3E%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%20%20width%3D%2235px%22%20height%3D%2235px%22%20viewBox%3D%220%200%2035%2035%22%20enable-background%3D%22new%200%200%2035%2035%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpolygon%20points%3D%2225.793%2C21.5%2021.293%2C26%2022.708%2C26%2027.208%2C21.5%2022.708%2C17%2021.293%2C17%20%22%2F%3E%3Cpath%20d%3D%22M19%2C21h7c0.276%2C0%2C0.5%2C0.224%2C0.5%2C0.5v0c0%2C0.276-0.224%2C0.5-0.5%2C0.5h-7c-0.276%2C0-0.5-0.224-0.5-0.5v0%20C18.5%2C21.224%2C18.724%2C21%2C19%2C21z%22%2F%3E%3Cpolygon%20points%3D%229.207%2C13.5%2013.707%2C9%2012.293%2C9%207.793%2C13.5%2012.293%2C18%2013.707%2C18%20%22%2F%3E%3Cpath%20d%3D%22M16%2C14H9c-0.276%2C0-0.5-0.224-0.5-0.5v0C8.5%2C13.224%2C8.724%2C13%2C9%2C13h7c0.276%2C0%2C0.5%2C0.224%2C0.5%2C0.5v0%20C16.5%2C13.776%2C16.276%2C14%2C16%2C14z%22%2F%3E%3Cstyle%20type%3D%22text%2Fcss%22%3Ecircle%2C%20ellipse%2C%20line%2C%20path%2C%20polygon%2C%20polyline%2C%20rect%2C%20text%20%7B%20fill%3A%20%23ffc917%3B%20%7D%3C%2Fstyle%3E%3C%2Fsvg%3E");
 }
 
 .locaties label input {
@@ -251,7 +221,7 @@ ol li {
 	border-bottom: solid 1px var(--main-bg-color);
 }
 
-ol li button {
+ol li a {
 	display: block;
 	padding: 0;
 	width: 100%;
@@ -260,17 +230,17 @@ ol li button {
 	border-radius: 0;
 }
 
-ol li button article header {
+ol li a article header {
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
 }
 
-ol li button article header p span {
+ol li a article header p span {
 	margin-left: 0.5em;
 }
 
-ol li button article header h3 {
+ol li a article header h3 {
 	margin: 0;
 	position: relative;
 }
@@ -388,6 +358,8 @@ form {
 .reis-opties label {
 	position: relative;
 }
+
+
 
 input[type="radio"] {
 	display: none;
@@ -535,6 +507,186 @@ select {
 	font-size: 16px;
 }
 
-.not-ns .naar-werk-container {
-	
+.resultaten-lijst {
+	display: flex;
+	flex-wrap: nowrap;
+	background-color: transparent;
+	overflow: hidden;
+	margin: 0 10vw;
+	flex: auto;
+	align-items: flex-start;
+}
+
+.resultaten-lijst li {
+	background-color: var(--secondary-bg-color);
+	margin-right: 1rem;
+	padding: 0.2rem;
+}
+
+.resultaten-lijst li:last-of-type {
+	margin-right: 0;
+}
+
+.resultaten {
+	margin: 0;
+	display: block;
+	max-width: none;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	height: 100vh;
+	flex-direction: column;
+}
+
+.ov-optie {
+	height: 100%;
+}
+
+.ov-optie a {
+	margin-top: 1rem;
+}
+
+.destinations p {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.destinations p .arrow{
+	margin-right: 1.5rem;
+}
+
+.ov-optie:focus {
+	outline: 3px solid var(--secondary-color);
+	background-color: var(--bg-color-light);
+}
+
+.ov-optie {
+	color: var(--secondary-color);
+}
+
+.keyboardinput-legenda .directional-inputs{
+	position: relative;
+	width: 90px;
+	height: 58px;
+}
+
+.keyboardinput-legenda .left,
+.keyboardinput-legenda .down,
+.keyboardinput-legenda .up,
+.keyboardinput-legenda .right {
+	width: 25px;
+	height: 25px;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--secondary-bg-color);
+	border: solid 2px var(--secondary-bg-color);
+	background-color: var(--secondary-color);
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+.keyboardinput-legenda .down,
+.keyboardinput-legenda .up {
+	color: var(--secondary-bg-color);
+	border: solid 2px var(--secondary-bg-color);
+	background-color: transparent;
+	font-size: 1rem;
+}
+
+.keyboardinput-legenda .left {
+	left: 0;
+	bottom: 0;
+}
+
+.keyboardinput-legenda .right {
+	right: 0;
+	bottom: 0;
+}
+
+.keyboardinput-legenda .down {
+	left: 32.5px;
+	bottom: 0;
+}
+
+.keyboardinput-legenda .up {
+	left: 32.5px;
+	top: 0;
+}
+
+.keyboardinput-legenda .space {
+	color: var(--secondary-bg-color);
+	border: solid 2px var(--secondary-bg-color);
+	background-color: var(--secondary-color);
+	padding: 0.1rem 2rem;
+	font-size: 1rem;
+}
+
+.keyboardinput-legenda {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	align-self: flex-end;
+	margin-right: 2rem;
+	justify-content: center;
+	margin-bottom: 1rem;
+}
+
+.keyboardinput-legenda .space-title {
+}
+
+.keyboardinput-legenda .keyboardinput-container {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+}
+
+.keyboardinput-legenda .keyboardinput-container p {
+	margin: 0;
+}
+
+.keyboardinput-legenda .keyboardinput-container > div {
+	min-width: 8rem;
+}
+
+.geboekte-reizen-lijst {
+	list-style-type: none;
+	background-color: var(--secondary-bg-color);
+	padding: 1rem;
+	max-width: 75rem;
+	width: 100%;
+}
+
+.geboekte-reizen {
+	display: block;
+}
+
+.destinations .arrow {
+	margin-left: 1rem;
+}
+
+.nav {
+	width: 100%;
+	background: var(--secondary-bg-color);
+	display: flex;
+	justify-content: flex-end;
+	padding: 0.2rem 1rem;
+}
+
+.nav label {
+	font-size: 1.5rem;
+	display: flex;
+	align-items: center;
+}
+
+.nav label input{
+	font-size: 1.5rem;
+	display: flex;
+	margin-left: 1rem;
+}
+
+body {
+	display: block;
 }
